kube-configurations/micropayment-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nginx
