kube-configurations/micropayment-server-stateful-set.yml
apiVersion: v1
kind: Service
metadata:
  name: headless-nginx
  labels:
    app: headless-nginx
spec:
  ports:
  - port: 8099
    name: web
  clusterIP: None
  selector:
    app: micropayment-server
---
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: micropayment-server
  labels:
    app: micropayment-server-stateful-set
spec:
  # modify replicas according to your case
  serviceName: headless-nginx
  replicas: 3
  selector:
    matchLabels:
      app: micropayment-server
  template:
    metadata:
      labels:
        app: micropayment-server
    spec:
      containers:
        - name: caraco-server
          image: index.docker.io/caraco/hedera-payment-server-staging:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
